--- a/s23-nextjs/meetupsapp20220519/package.json
+++ b/s23-nextjs/meetupsapp20220519/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app20220518",
+  "name": "meetupsapp20220519",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^4.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
-    "babel-eslint": "^10.1.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
   }
